--- a/writings/diss_workbook.org
+++ b/writings/diss_workbook.org
@@ -1,14 +1,14 @@
 * Counter-Code: Computational Methods for Working with Language
 ** topic:
-- Computational methods for working with language about queerness. 
-
+- Computational methods for working with text about queerness.
+  
 ** book questions:
 1. What do concepts from Queer Studies and adjacent fields offer to
    computational tools for working with text?
 2. How do computational methods constrain the expressive potential of
    language into data?
 3. How do concepts from Queer Studies and adjacent fields work against
-   constraints in language data?
+   constraints in text data?
 
 Template answers to questions:
 
@@ -21,18 +21,18 @@ Template answers to questions:
         language meaning.
      2. QOCC's concept of dis-identification offers an approach to
         textual markup that delineates irreconcilable interpretations
-        of language choices.
+        of language.
      3. Black Feminist Studies' concept of the flesh offers an
-        approach for analyzing text display that is grounded in the
-        physicality and materiality of the screen.
+        approach for analyzing software that is grounded in the
+        physicality and materiality of screen display.
      4. Trans Studies' concept of normativity offers an approach to
         text generation that reveals shared investments across
         identity and subject groups.
 
-2. How do these computational tools constrain the expressive
-   potential of language into data?
+2. How do these computational tools constrain the expressive potential
+   of language into data?
    - [Constraint] [does something] to language [to make it this].
-     1. In text analysis, "loops" strip language of idiosyncracies in
+     1. In text analysis, "loops" strips language of idiosyncracies in
         order to count its common features.
      2. In textual markup, "tags" disambiguate and fix language to
         sort it into discrete elements within an ordered hierarchy.
@@ -44,33 +44,34 @@ Template answers to questions:
         use.
 	
 3. How do concepts from Queer Studies and adjacent fields work against
-   constraints in language data?
+   constraints in text data?
    - Queer studies [concept] [does a thing to work within and against
      constraint]
      1. From the concept of iteration, the emphasis on repetition
-        influences a text analysis practice that multiplies and
+        inspires a text analysis practice that multiplies and
         re-signifies word meaning.
      2. From the concept of dis-identification, the appropriation of
         dominant codes influences a markup strategy that delineates
-        the boundaries of tagging structures.
+        the gaps between tagging structures.
      3. From the concept of the flesh, the foreclosure of depth
-        suggests a close reading strategy that unleashes potential
+        suggests reading layers of software as intimate and physical
         screen effects.
-     4. From the concept of normativity, the generalization of
-        language suggests a focus on shared investments between
-        polarized perspectives.
+     4. From the concept of normativity, the desire for conformity
+        guides analysis toward shared investments between polarized
+        perspectives.
 ** book argument
 Concepts from Queer Studies and adjacent fields offer methodological
 approaches to computational tools that work with text-based data. Such
 tools, which are used for tasks like text generation, preservation,
-and display, tend to constrain the expressive potential of language,
-stripping its idiosyncrasies and ambiguities, to turn it into
-computable units of data. Queer Studies and adjacent fields inspire
-methodologies for working against these constraints---methodologies
-that destabilize authoritative and delimiting structures, and open
-novel readings of language data. By engaging closely and attentively
-with these computational processes, users can resist the reductive
-ways that technology works upon them.
+and display, tend to constrain language about gender, sex, and
+sexuality, stripping its idiosyncrasies and ambiguities, to turn it
+into computable units of data. Queer Studies and adjacent fields
+inspire methodologies for working against these
+constraints---methodologies that destabilize authoritative and
+delimiting structures, and open novel readings of language data. By
+engaging closely and attentively with these computational processes,
+users can resist the reductive ways that technology works upon
+expression.
 
 ** evidence
 *** main examples or case studies:
@@ -95,61 +96,87 @@ ways that technology works upon them.
 
 ** chapter snapshots
 - Chapter 1:
-  - topic: text analysis to study gender
+  - topic: text analysis and gender
   - scope and evidence type:
     - Computational text analysis algorithms like Logistic Regression,
-      Burrow's Delta.
-    - the Queer Studies Theory of Gender Performativity,
-    - Woolf's /Orlando/, Rosenberg's /Confessions of the Fox/ or
-      /Nightwood/ or /Fun Home/.
+      Burrow's Delta, semantic similarity
+    - Queer Studies' theory of Gender Performativity
+    - Woolf's /Orlando/, (Rosenberg's /Confessions of the Fox/ or
+      /Nightwood/ or /Fun Home/). 
   - main claims:
-    - That dominant methods in text analysis use algorithms in a way
-      that close off the kinds of readings we can peform on gender.
-    - Python processes text to diminish peculiarities and move toward
-      abstract connections.
-    - One can iterate over binary structures in algorithms to open up,
-      rather than collapse, possible associations in gender terms.
+    - claim: Text analysis methods that reduce complexity and
+      variability of gender expression into binary forms can be
+      "iterated" through different vantage points (close and distant)
+      to surface multiplicity.
+      - That dominant methods in text analysis use algorithms in a
+        way that close off the kinds of readings we can peform on
+        gender.
+      - Python processes text to diminish peculiarities and move
+        toward abstract connections.
+      - One can iterate over binary structures in algorithms to open
+        up, rather than collapse, possible associations in gender
+        terms.
+  - metacommentary:
+    - Words have inherent multiplicity, meaning is always expanding
+      beyond the binary. (But also, meaning is discursive,
+      disembodied--lacking material realities, whitewashed).
 - Chapter 2:
-  - topic: text preservation/markup to study sexuality
+  - topic: text encoding and sexuality
   - scope and evidence type:
-    - Work and theory in textual scholarship and queer historiography.
+    - textual scholarship and queer historiographical approaches to
+      preservation.
     - TEI technology and projects that attempt to markup complex
       sexual IDs,
-    - The first 3 chapters of the manuscript of Dorian Gray, maybe
-      /Nightwood/, /Confessions/.
+    - The first 3 chapters of the manuscript of Dorian Gray (maybe
+      /Nightwood/, /Confessions/).
   - main claims:
     - TEI imposes not just disambiguation between elements but also a
       power structure which delimits what can and cannot be said.
-    - The hierarchical nature of the TEI imposes a top-down control
-      over all child elements; a situation that multiplicity will not
-      solve.
+    - Hierarchical formats that categorize data can also suggest
+      implicit power structures that delimit what is sayable and
+      permissable.
     - We cannot mark up what has been lost, but we can see our own
       complicity in power structures.
+  - metacommentary:
+    - Meaning is inherent in organization and structure, controlling
+      what can and cannot be signified. (Markup, inclusion into
+      systems, isn't enough).
 - Chapter 3:
-  - topic: text display to study sex
+  - topic: text display and sex (intercourse)
   - scope and evidence type:
     - Media archaeology theorizing on materiality.
     - Black feminist theorizing on the flesh.
-    - The novel Dawn by Octavia Butler and /skinonskinonskin/
+    - The novel /Dawn/ by Octavia Butler and the electronic literary
+      work, /skinonskinonskin/ by /Entropy8Zuper/.
   - main claims:
-    - That the collision/indeterminacy between thinking and feeling is
-      a queer method of resisting circumscription within power
-      structures.
+    - The collision between thinking and feeling surfaces the tension
+      of where is sensuality.
+    - The surface (screen layer) of computing obscures the depths of
+      material processing. 
     - Across layers of display and source code, surface effects are
       unmappable, fugitive, displaced, enabling significatory
-      possbilities that resist technological constraints.
-    - The pairing down to surface enables connectivity, intimacy.
+      possbilities (connectivity, intimacy) that resist technological
+      constraints. The pairing down to surface enables connectivity,
+      intimacy.
+      - Materiality exists even in abstracted forms, and points to
+        significatory possibilities that resist circumscription.
+  - metacommentary:
+    - The materiality of the sign offers a way of working within
+      reductive signification processes.
 - Chapter 4:
-  - topic: text generation to study embodiment
+  - topic: text generation and sex (gendered embodiment)
   - scope and evidence type:
-    - Trans studies on normativity
+    - Trans studies on normativity and embodiment
     - Machine learning technology and training process
-    - Popular discourse in online journalism and reality tv
+    - Popular, online journalism and reality tv
   - main claims:
     - Machine learning is a tool of approximation, reducing meaning to
       common denominators and flattening perspectives to univocality.
     - It can be used to find similar investments across polarizing
-      perspectives. 
+      perspectives.
+  - metacommentary:
+    - univocality is a way of finding shared investments.
+
 ** organizing principle
 Each chapter takes a different process for working with text,
 identifies a computational constraint that reduces textual detail in
@@ -157,16 +184,16 @@ some way, and finds a way of working the constraint into a
 close-reading practice.
 
 - process for working with text -> constraint
-1. text analysis, cleaning -> iteration (loops)
-2. text preservation, encoding -> containment (tags)
-3. text display, transformation -> abstraction (display)
-4. text generation, normalization -> approximation (prediction algoirthms)
+1. text analysis -> iteration (loops)
+2. text encoding -> containment (tags)
+3. text display -> abstraction (display)
+4. text generation -> aggregation (prediction algoirthms)
    
 - constraint -> what it does to data -> how to resist 
 1. iteration -> regularizes/homogenizes data -> repeat with difference
 2. containment -> leaves out data -> narrate between gaps
 3. abstraction -> displaces data -> close reading source code
-4. approximation -> approximates data -> description?
+4. aggregation -> averages data -> finding common ground
 
 ** topic, claim, and metacommentary
 Chapter 1:
@@ -202,39 +229,56 @@ Chapter 4:
 - metacommentary: HOWEVER, univocality is a way of finding shared
   investments.
 
-** TODO model books:
+** the market
+*** competing or comparable books
+Please provide the title, author, date of publication, publisher and
+price of three to five comparable books that compete directly for a
+reader’s attention.
+
+What contribution do these books make to your field of research? What
+are you doing that improves upon and sets your work apart from each of
+these books’ contribution?
+
+If there is no direct competition, explain why. Has the topic only
+been covered in a chapter elsewhere? Is this the first book-length
+treatment of it?
+
+**** jacob gaboury
 **** heavy processing
-**** queer data studies? 
-**** [[https://mitpress.mit.edu/9780262037006/the-fabric-of-interface/][The Fabric of Interface Mobile Media, Design, and Gender]], Stephen Monteiro, 2017
-Topic: Contemporary digital media's connection to textile
-arts/production. 
 
-Claim: our everyday digital practice has taken on traits common to
-textile and needlecraft culture, and textile metaphors used to
-describe computing (weaving code, threaded discussions, zipped files,
-software patches, switch fabrics) represent deeper connections between
-digital communication and “homecraft” or “women's work.”
 
-Evidence base:
-- the production of hardware and software from their conception in the
-  nineteenth century through twentieth-first-century globalized
-  electronics industries
-- textual and visual discourses around the digital, interactive,
-  integrative practices of contemporary digital devices and
-  their networked users
-- needlecraft and textile techniques, handloom or quilting frame,
-  mechanics of sewing and needlework
-- augmented reality (AR) and VR systems such as Google Glass, Google
-  Cardboard, and Oculus Rift
+**** queer data studies
+Patrick Keilty, Ed. /Queer Data Studies/. University of Washington
+Press, 2024. $30.00
 
-It's a good fit. Considering both everyday digital practices and
-textile practices. Drawing analogies between these. 
+This book is the only substantial treatment of the field of Queer Data
+Studies. It comprises a collection of essays organized around the
+theme of "queer data," which is taken up in a variety of contexts,
+including Black Studies, machine learning, sex work, HIV Studies, and
+Science and Technology Studies (STS). This book's main contribution is
+its critical stance on data, pointing out that "Queer people have
+complex, sometimes contradictory relationships to data" (11). It
+explores common heuristics, like opacity, ephemerality, and messiness,
+within Queer Studies and related fields, and how these inflect topics
+of surveillance, privacy, autonomy, and soverignty in data.
 
-**** [[https://mitpress.mit.edu/9780262517409/mechanisms/][Mechanisms New Media and the Forensic Imagination]], Matthew G. Kirschenbaum, 2012
-**** [[https://direct.mit.edu/books/monograph/5133/Image-ObjectsAn-Archaeology-of-Computer-Graphics][Image Objects: An Archaeology of Computer Graphics]], Jacob Gaboury. 2023
-The MIT Press DOI: https://doi.org/10.7551/mitpress/11077.001.0001
-**** [[https://www.upress.umn.edu/9781517918774/a-users-guide-to-the-age-of-tech/][A User's Guide to the Age of Tech]], Grant Wythoff, 2025
-U of Minnesota Press
+As an edited collection, however, there cannot be a sustained
+examination of digital tools or processes involved in working with
+data, which is where my own project intervenes with its deep readings
+of computational mechanism.
+
+Additionally, my book's expansion beyond the field of Queer Studies
+puts concepts like embodiment and the flesh, from Trans and Black
+Feminist Studies, into orbit with Queer Studies. 
+
+
+**** Bonnie Ruberg, Video Games Have Always Been Queer, NYU Press 2019.
+Catalogued: Postmillennial Pop / media & technology / sociology
+**** Cait McKinney, Information Activitsm: A Queer History of Lesbian Media Technologies, Duke U Press 2020. 
+Catalogued: Media Studies > Media Technologies, Gender and Sexuality >
+LGBTQ Studies, Activism
+
+
 ** book narrative outline
 Paragraph 1: What does my book as a whole do?
 - [X] my book's topic: Computational methods for working with language
@@ -244,7 +288,7 @@ Paragraph 1: What does my book as a whole do?
   - By engaging closely and sensually with a technology, we can find
     ways of resisting its reductions, the ways it works upon us.
   - Experimenting with how something works in depth and in a sensual
-    way will liberate us from being used and being users
+a    way will liberate us from being used and being users
 - [X] To answer this question, I apply concepts from QS and related
   fields to work against constraints in computation using examples
   from literature as my test case. [or see evidence base above].
@@ -343,99 +387,110 @@ working against these constraints---methodologies that destabilize
 authoritative and delimiting structures, and open novel readings of
 language data. In its experiment with these new methodologies, this
 book uses examples of Queer literature as a test case, applying
-methods to /read/ elements of literary form in computational
-structures and processes. By engaging closely and attentively with
-these computational processes, the reader discovers tools for
-resisting the ways that technology works upon language, moving
-simultaneously with and against the system which constrains meaning.
+methods to elements of gender, sexuality, sex, and the body in
+computational structures and processes. By engaging closely and
+attentively with these computational processes, the reader discovers
+tools for resisting the ways that technology works upon language,
+moving simultaneously with and against the system which constrains
+meaning.
 
-Each chapter of this book takes up a different computational process
-for working with text, investigates how that processes handles
-language data, and identifies a constraint---a mechanism that
-transforms and reduces an expressive quality of language into data.
-Then, with the help of Queer Studies and related fields, it re-works
-the constraint into a new practice that resists this reduction of
-language, and applies this practice to reading a sample of Queer
-literature. The earlier chapters focus on basic computational
-mechanisms, like counting and tagging language data, while the later
-chapters move toward more complex processes of abstraction and
-prediction. Chapter One considers text analysis methods, and focuses
-on the foundational computational mechanism of counting data. Chapter
-Two turns to text preservation methods, and focuses on "tagging" or
-categorizing text data. Then, moving from basic concepts to more
-complex processes, Chapters Three and Four consider abstraction and
-prediction, respectively, which are responsible for text display and
-generation. Computational components from the first half of the book,
-like word vectors and markup languages, are expanded in the second
-half to describe more advanced concepts, like neural nets and
-animation processes.
+Each chapter of this book takes up a computational process for working
+with text, and uses it to study a component of queer identity,
+expressed in a work of Queer Literature. For every computational
+process, the chapter identifies a constraint---a mechanism that
+transforms and reduces the component of queer identity into computable
+data. The earlier chapters focus on basic processes, like counting and
+tagging language data, to study gender and sexuality, while the later
+chapters move toward more complex processes of visual display and
+algorithmic prediction to explore sexed materiality and embodiment.
+Chapter one, "Counting Text," uses text analysis to study gender in
+Virginia Woolf's /Orlando: A Biography/. Chapter two, "Tagging Text,"
+turns to text preservation methods to trace the suppression of
+homosexuality in Oscar Wilde's novel, /The Picture of Dorian Gray/.
+Then, the third chapter "Text Display," reads examples of sensuality
+and physicality acrosss print and electronic formats, in Octavia
+Butler's novel, /Dawn/, and a work of electronic literature, entitled
+/skinonskinonskin/, by the net artist, /Entropy8Zuper/. Finally, the
+fourth chapter, "Text Generation," experiments with algorithmic
+prediction to analyze gendered embodiment in an reality TV dating
+show, /Love is Blind/. Moving from canonical works of Queer Literature
+and Queer Theory in its early chapters to more eclectic source
+material, like science fiction and reality TV in the latter chapters,
+this book expands the repertoire of "Queer" beyond its now
+instiutional use. Developing queer for the future, the book argues,
+involves cooperation across adjacent fields like Trans Studies, Black
+Feminist Studies, and Latinx Studies. 
 
-Chapter One, "Counting Text," examines a foundational act of
-computation---counting. It explores counting in the context of
-quantitative text analysis to study gender in Virginia Woolf's novel,
-/Orlando: A Biography/ (1928). It delves into the mechanics behind
-quantitative text analysis, identifying the core concept of the
-"loop," which repeats the same code execution to bits of data, one by
-one. This mechanism, which removes textual idiosyncrasies and details,
-flattens and reduces text data into a standardized, computable form.
-Then, the chapter connects the loop mechanism in code to the theory of
-Gender Performativity, first propounded by Judith Butler in 1990's
-/Gender Trouble: Feminism and the Subversion of Identity/, which is
-widely cited as an inaugural text of Queer Studies. From Butler's
-formulation, it applies the iterativeness of gender performativity and
-its potential for re-signifying terms to a text analysis pratice that
-/iterates/ through close and distant reading. It performs this method
-on a reading of gender in Woolf's novel, /Orlando/ (1928), to surface
-the multiplicity inherent in language forms. Finally, it offers some
+Chapter One, "Counting Text," explores text analysis to study gender.
+It examines a core operation of text analysis, which is counting, or
+compiling word freqencies and patterns through context and assocation.
+This chapter delves into the process behind counting text, identifying
+the core concept of the "loop," which repeats the same action to a
+collection of text, one word at a time. This mechanism, which enables
+text analysis processes to remove idiosyncracies and details from
+text, flattens text data into a standardized, computable form. The
+chapter then explores possibilities for handling this constraint,
+turning to the theory of Gender Performativity, from Judith Butler's
+book, /Gender Trouble: Feminism and the Subversion of Identity/
+(1990), widely cited as an inaugural text of Queer Studies. Similarly
+to text analysis, gender performativity is based on a cyclical
+operation that repeats an exact action over and over again. The
+chapter takes the iterativeness of gender performativity and its
+potential for re-signifying terms, into a text analysis pratice. It
+applies this practice to Woolf's novel, /Orlando/ (1928), to study the
+multiplicity of gender forms in that novel. Finally, it offers some
 more recent critiques of this reading and of Gender Performativity for
 the way it elides questions of embodiment and materiality.
 
-Moving from counting text, Chapter Two, introduces "Tagging Text," a
-procedure for organizing and sorting data into machine-readable
-structures. This chapter applies the Text Encoding Initative (TEI), a
-widely-used standard for tagging or "encoding" text-based data, to
-mark the revisions of Oscar Wilde's manuscript of /The Picture of
-Dorian Gray/ (1990), which was edited by the author to remove
-references to homosexuality. This chapter explores the TEI's rigid
-tagging structure, an organizational schematic made of the individual
-tags that contains text elements within units that are nested within
-one another. The hierarchical structure of the TEI imposes a top-down
-control in which lesser or "child" elements are fixed and
-disambiguated according to their "parent" element, a structure that
-delimits what can and cannot be said within its boundaries. The
-chapter then searches for methods for resisting this structure by
-turning to Queer of Color Critique, and its concept of
-dis-identification. This concept offers a method of re-appropriation,
-"reading onesself into" structures of dominance. Applying this
-analytic to the TEI allows one to delineate irreconcilable
-interpretations of language choices in Wilde's revision process, an
-experiment that surfaces not the content, but the contours, of what
-cannot be recovered. The chapter ends with a meditation on Wilde's own
-position of privilege as an editor of his own text, the executor of
-his own censorship, and how TEI can be used as a way of surfacing
-power operations in text.
+Moving from text analysis to text encoding, Chapter Two, "Tagging
+Text" examines a text preservation format to study sexuality. This
+protocol, the Text Encoding Initative (TEI), consists of a set of
+electronic standards widely-used for encoding text-based data. The
+structure of the TEI, which requires that text be sorted into rigid
+categories, oragnizes textual elements into a modular components
+within a hierarchical structure. Within this structure, inner or
+"child" elements become disambiguated and fixed according to the
+"rules" of the outer, parent element. To resist this dominating,
+top-down control of the data format, the chapter turns to the strategy
+of disidentification, theorized by Queer of Color Critique scholar
+Jose Esteban Munoz. This concept offers a method of re-appropriation,
+of "reading onesself into" a dominance structure which is intended for
+exclusion (PAGE NUMBER). The chapter then applies this strategy to
+encode the revisions that Oscar Wilde made to his novel, /The Picture
+of Dorian Gray/ (1990), prior to its publication in 1890.
+Disidentification, which works within and against majority culture,
+offers a useful heuristic for grappling with the rigid boundaries of
+the TEI. This approach delineate irreconcilable interpretations of
+language choices in Wilde's revision process, without resolving the
+coded elements of homosexuality in Wilde's text. It is an experiment
+that surfaces the contours, but not the content, what cannot be
+recovered. The chapter ends with a meditation on Wilde's own position
+of privilege as an editor of his own text, the executor of his own
+censorship, and how TEI can be used as a way of surfacing power
+operations in text.
 
-The second half of the book moves from foundational processes in
-computing like counting and tagging, to more complex processes of
-layers of software abtraction and algorithmic prediction. Chapter
-Three, "Text Display," examines how screen effects---displays and
-animations---engage with data in its material form stored within the
-computing "stack," consisting of layers of software. It takes an
-example of early internet art, called "NET art", /skinonskinonskin/
-(1999), a series of "digital love letters" written by Aureia Harvey
-and Michael Samyn (Rhizome, /Net Art Anthology/). The chapter pursues
-a close reading of the electronic work, examining how the form of
-computer code and coding logics within its software layer bear on the
-reading of the work's surface, the screen layer. To read the forms of
-code, it draws from two seemingly unrelated fields, Media Archaeology
-and Black Feminist Studies, both of which have much to say about how
-physicality and materiality interact with abstract and symbolic
-processes. Bringing these theorizations to a deep reading of
-programming code reveals how screen effects, which seem disconnected
-from inaccessible and obscure hardware processes, offer significatory
-possbilities for reading materiality and physicality. As the net
-artwork's layers of JavaScript and HTML code demonsrate, the paring
-down to surface forms enables readings of connectivity and intimacy.
+Moving from foundational processes like counting and tagging text, the
+second half of the book turns to more complex processes of text
+display and generation. Chapter Three, "Text Display," examines the
+computing "stack," the layers of software that transport data from
+storage to the screen. In order for the stack to operate efficiently,
+code instruction (program code) must be separated from its execution
+(computation). This environment creates an ontological state of
+displacement, where every electronic action occurs at a remove, giving
+the illusion that electronic processes are boundless or immaterial. To
+read materiality back into the stack, this chapter borrows from two
+seemingly unrelated fields, Media Archaeology and Black Feminist
+Studies, both of which offer robust methodologies for reading physical
+and "fleshy" dimensions of symbolic processes. Using these theories,
+the chapter embarks on a deep reading of program code from an early
+work of electronic fiction, /skinonskinonskin/, by Aureia Harvey and
+Michaël Samyn, (1999). This work, an early example of internet or
+"NET" art, consists of several "digital love letters," written in HTML
+and animated with JavaScript and Flash software (/Net Art Anthology/).
+The chapter's reading of this work surfaces how its screen effects,
+while apparently disconnected from underlying hardware and
+computational processing, offer significatory possbilities for reading
+intimacy and connection over the network.
 
 Building on the analysis of "Counting Text," or word frequencies, in
 chapter one, the fourth and final chapter explores an advanced
@@ -471,20 +526,26 @@ problems spun from those in first half: from Chapter One, the problem
 of discursive forms, and how they elide embodied experiences of
 gender, and in Chapter Two, the problem of power structures, which are
 totalizing. Chapters Four and Three, respectively, answer these
-problems by grounding in what is shared and what is material. It shows
-how Queer Studies, as a field, is good at offering certain
+problems by grounding in what is shared and what is material.
+
+It shows how Queer Studies, as a field, is good at offering certain
 possibilities for resistance that /disrupts/ existing structures, for
 performativity and dis-identification, but other fields, like Black
 Feminist and Trans Studies, offer ways of resisting that are /outside/
 of the current structure. Both have advantages and disadvantages: both
-are necessary for resistance work. 
+are necessary for resistance work.
+
+Core computational components from the first half of the book, like
+"word vectors" and markup languages, which are essential to text
+analysis and text encoding, are developed in the second half to
+describe more advanced concepts, like neural nets and software stacks,
+which drive processes for generating and displaying text.
 
 
-ADD:
-- queer concept to each chapter: gender, desire, sex, body
-- and this---not queer studies---is actually what gives me an
-  organizing principle around "queerness". Queer can mean Queer
-  Studies, but it also means things associated with gender, sexuality,
-  and intercourse. I am expanding the umbrella of queer, mostly
-  because we don't have another term that refers to all of these
-  simultaneously. 
+Surfaces the idiosyncratic, ambiguous, and slippery qualities of
+language. 
+
+Then, with the help of Queer Studies and related fields, it re-works
+the constraint into a new practice that resists this reduction of
+language, and applies this practice to reading a sample of Queer
+literature.
