--- a/writings/four/four_sketch.org
+++ b/writings/four/four_sketch.org
@@ -1,21 +1,67 @@
 ** sketches
 *** goals with revision
-- incorporate Sedgwick?
-- incorporate writing on Heritage and ACLU
-- add more description of ML training
-- add more close reading of transcripts
-- add more Trans Studies theory
+- incorporate Heritage & ACLU on reading across polarity
+- incorporate Sedgwick on reading practices
+- add Trans Theory on normativity
+  - Prosser, Malatino, Chu
+  - review reading notes, notecards & annotated bibs
+- expand ML training process
+  - adding word vectors
+  - adding critique of prediction (Chun, Gebru)
+- expand close reading of transcripts?
 
-*** revision TODOs
-- [ ] add writing on Heritage & ACLU
-- [ ] add Sedgwick on reading practices
-- [ ] extend explanation of ML training
-  
-*** reverse outline (outdated)
+*** TODOs
+- [ ] read tsq draft
+  - make small revisions
+  - markup larger revisions
+- [ ] add Trans Studies
+- [ ] add ML processes
+- [ ] add Heritage & ACLU
+- [ ] add Sedgwick
+- [ ] expand close reading?
+*** outlines
+**** reverse outline (12.5.25)
+- Sedgwick's shift from knowledge to method.
+  - reparative reading examines the generative, productive aspects of
+    language.
+- Heritage/ACLU
+  - My project seeks a new way of reading polarization.
+  - ADD: SPECIFICALLY TO STUDY GENDER, PERSPECTIVES ON GENDER. 
+  - Heritage Foundation outputs represent conservative perspective of
+    gender as stable, biological.
+  - ACLU outputs represent the progressive side of gender as
+    affirming, celebratory.
+  - But there is another aspect to the language here, one that
+    ammalgamates or collapses polar perspectives into a single
+    stance.
+  - Different perspectives on subjectivity from the conservative and
+    proggressive sides
+- Bridge to /LiB/
+  - ADD/ADAPT: ML allows one to read for what is common, what is shared
+    - For example, the body across a cis/trans fault line in the
+      cisgender dating show, /Love is Blind/.
+  - ADAPT: This paper explores bodily dissonance in /LiB/.
+  - Cis people enter a temporary "trans trajectory"
+  - I use LLMs to synthesize common patterns form the show transcripts
+    about the body and touch.
+- Critique of ML
+  - This project resists ML's focus on scale.
+  - The focus on scale is not sustainable.
+  - The focus on scale is driven by AI-fueled "hype."
+  - By constrast, my method approaches ML as reflexive.
+  - Additionally, I study prediction as a normalizing tool which can
+    surface shared desires.
+  - The shared desire for normativity is where the cis/trans
+    intersect. 
+
+
+
+**** reverse outline (outdated)
 - This paper is about normativity
   - Sedgwick on reading practices
 - Looking at the body in cisgender narrative, the body dissociations
 - Using a method to study normativity that /normalizes/ language.
+  - *ADD: language is first quantified*
   - at each step, representations are adjusted
   - meaning is averaged
 - close reading:
@@ -28,24 +74,48 @@
   - out of the pods, body signals visuality
   - out of the pods, left with aspiration that affects touch
 - characters left with aspiration for touch at the end
-  - example of touch being terrifying, "you're not their mommy"
+  - *ADD: example of touch being terrifying, "you're not their mommy"*
   - perhaps something left over from the pods that places them in a
     state of something like future fatigue
 - Reading pratices as a way of working against transphobia. 
 
+**** outline (outdated)
+- toward a new method of reading
+  - AIDs crisis: what kind of knowledge can help deveop politics. 
+  - reading normativity, looking for shared investments.
+- close reading: machine learning
+  - the training process toward approximation
+  - hallucination and overfitting (when there isn't enough data)
+- close reading: LiB
+  - person splits from visual in the pod
+    - Prosser on body image split from material body
+    - "my body" activates sensorium of feelings
+    - touch is more direct?
+  - postpods,
+    - the body collapses into the visual
+    - touch becomes repulsive
+    - future fatigue sets in  
+- trans studies on normativity
+  - Chu: requires that we understand normativity
+  - Prosser: on narratives of embodiment, coming back to the body
+  - Malatino: attachments to the future
+
 *** questions
-How can we surface common investments between the anti-trans and trans
+Are there, could there be, any way of surfacing body narratives in
+heterosexual, cisgendered stories?
+
+How might these investments connect the anti-trans and trans
 perspectives?
 
-Yes, in body narratives in heterosexual, cisgendered stories. Machine
-learning ideal tool for studying normativity: a tool for finding the
-shared, the average, the obvious.
+Machine learning ideal tool for studying normativity: a tool for
+finding the shared, the average, the obvious.
 
 Close reading analysis:
 - Question -- how does the presence of the visual body affect dating?
 - Answer -- body perception splits, bodily sensation flows and ebbs. 
 
 *** bank
+**** sedgwick
 Over 25 years ago, in response to lack of government response to the
 AIDS crisis, Eve Kosofsky Sedgwick questions the point of knowledge
 pratices like critique. She asks, "What does knowledge do---the
@@ -69,6 +139,7 @@ and impotence, and it explores one possibility for what we might do
 with it. It seeks out, like Sedgwick did decades ago, a way of reading
 that surfaces connections in places where they are unexpected.
 
+**** body image
 Despite being cisgendered, then, body image can have a material force
 in an environment where the integrity bodily perception is disrupted.
 The sensation of the body feeling "real" and like it's "coming off"
@@ -76,6 +147,7 @@ speak to this process of fragmentation, a process that is so visceral
 so that, as Prosser explains, "feeling like... can be experienced as a
 core self" (79).
 
+**** machine learning
 This is how it builds a sense of the meaning associated with each
 word,
 
@@ -85,46 +157,13 @@ topics like love, desire, and the body.
 This paper is about normativity, and how the desire for normativity
 can connect even the most polarized subjects and experiences.
 
+**** love is blind
 Participants enter /Love Is Blind/ with one goal: to find their ideal
 partner and get married. However, the show's main gambit is that the
 participants cannot see each other; they must date from behind a wall,
 with only access to the other's voice. Once they have agreed to get
 married, then they are allowed to meet their intended in person. And
 usually, that is when things start to go south.
-
-**** what does LiB have to do with trans studies? 
-Strictly speaking, I do not align with the identity qualities that
-determine belonging in either of the groups that I am concerning
-myself with in this essay. As a cis lesbian, who is not trans, and who
-is not straight, where do I come off making a case about using Trans
-Studies theory to read the dynamics of heterosexual relationships? I
-could say that queerness puts me into a kind of solidarity/intimacy
-with trans subjects, or even that my sexuality is intimately linked to
-my more masc presentation. But that is as true as it would be to say
-that I experience a foundational connection to cis subjects through
-the shared identification with my assignment at birth---which is
-false.
-
-**** trans studies on normativity, body splits, future fatigue
-To explore the desire for normativity, I borrow from ideas in Trans
-Studies. Andrea Long Chu points out that Trans Studies "requires that
-we understand–-as we never have before–-what it means to be attached
-to a norm, by desire, by habit, by survival" ("After Trans Studies"
-108).
-
-Specifically, I borrow from ideas about the body. I am interested in
-how the body figures into trajectories of normativity, which, in the
-case of the cis-hetero subjects in /LiB/, is about the trajectory
-toward getting married.
-
-
-
-And that this experience tells us a lot about what normativity, how
-the desire for normative markers, works in perhaps unexpected
-intra-social ways (that it creates envy and animosity among cis
-groups?). The experience for cis subjects in the pods creates
-expectations and disappointments that are actually shared across
-identity groups.
 
 **** word vectors
 First, I feed examples of text culled from the show's transcripts into
@@ -145,7 +184,7 @@ concepts of embodiment and desire and how they influence normativity.
 I choose this computational method because it is an ideal one for
 studying what words and phrases mean base on the context that they are
 being used. This method, which is machine learning, aggregates word
-meaning from various examples of usage. For my project, these examples
+, meaning from various examples of usage. For my project, these examples
 come from the transcripts of the show itself, which I feed into a
 machine learning algorithm. This algorithm "learns" what words mean in
 context. It's goal is build a strong enough model of word meaning so
@@ -193,9 +232,7 @@ relation between one word and another.
 Word meaning, significantly, can be calcuated via a formula. That's
 what the authors argue, anyway, in the paper that introduced word
 vectors to the world, titled "Efficient Estimation of Word
-Representations in Vector Space" (Mikolov et al. 2013). To illustrate
-the power of word vectors, the authors offer calculate the vector
-"queen" by subtracting "man" from "king" and adding "woman."[fn:1]
+Representations in Vector Space"  [fn:1]
 
 #+begin_src
   vector(”King”) - vector(”Man”) + vector(”Woman”) = vector("Queen")
@@ -211,7 +248,7 @@ are, just as they know what a "king" and "queen" is, speaks to how
 assumptions of gender are implicated within those of patriarchy and
 imperialism.[fn:2]
 
-**** training process
+**** training process: hypothesis, loss, gradient descent
 
 In the first step, the "hypothesis" step, a model will randomly guess
 what words are associated with each other---it will make a hypothesis.
@@ -876,7 +913,7 @@ for normativity can be a through line between trans subjects and
 anti-trans groups. If we can find some kind of connection, solidarity,
 then could we bridge the gaps of hate and fear of the unknown?
 
-*** some theory:
+*** polarization being a means for solidarity
 Malatino - negative feelings are a means of intra-trans relation.
 Arguing for the political efficacy of negative feelings. (Need to get
 the specific argument/possibilities here).
